rutas, viajes, operadores
